# logi-robot

./: .gitignore  Cargo.toml  Cross.toml  README.md  displayoutput.sh  exporttopi.sh  logi.sh  opencvtopi.sh  pins.txt
.cargo/: config.toml
docker/: Dockerfile  OldDockerfile  sourcelist  sources
src/: camera.rs  camera.sh  gyro.rs  infrared.rs  main.rs  motor.rs  servos.rs  stepper.rs  ultrasonic.rs
