[package]
name = "rpr"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin_sleep = "1.0.0"
tokio = {version = "1.5.0", features = ["time"]}
rppal = "0.11.3"
howlong = "0.1.7"
websocket = "0.26.2"