[package]
name = "rpr"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin_sleep = "1.0.0"
rppal = "0.13.0"
howlong = "0.1.7"
ws = "0.9.1"
serde_json = "1.0.68"
rscam = "0.5.5"
base64 = "0.13.0"
